[Layouts of insurance]change layouts by the responsibility of prismk

--- a/app/src/main/res/layout/activity_myinsurance.xml
+++ b/app/src/main/res/layout/activity_myinsurance.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/bt_askprise"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/black"
+                android:background="@mipmap/myinsurance_button_normal"
                 android:text="@string/myinsurance_button_queryprise"
                 android:textColor="@color/white"
                 android:layout_margin="@dimen/myinsurance_layout_margin"/>
