--- a/app/src/main/res/layout/activity_personaldata.xml
+++ b/app/src/main/res/layout/activity_personaldata.xml
@@ -366,6 +366,7 @@
             </RadioGroup>
 
             <Button
+                android:id="@+id/bt_pay"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="30dp"
