--- a/app/src/main/res/layout/activity_pickinsurancekind.xml
+++ b/app/src/main/res/layout/activity_pickinsurancekind.xml
@@ -498,6 +498,7 @@
                         android:background="@color/grayDividerDark" />
 
                     <Button
+                        android:id="@+id/bt_ok"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/grayitem_height"
                         android:background="@color/black"
